modificato css del box articoli

--- a/HTML/NavigationBarDown.html
+++ b/HTML/NavigationBarDown.html
@@ -11,7 +11,7 @@
   <a href="capoHome.php?sez=eventi">EVENTI</a>
   <a href="capoHome.php?sez=teatro">TEATRO</a>
   <a href="capoHome.php?sez=cucina">CUCINA</a>
-  <a href="capoHome.php?sez=novita'">NOVIT&Aacute;</a>
+  <a href="capoHome.php?sez=novit&aacute">NOVIT&Aacute;</a>
   <a href="capoHome.php?sez=arte">ARTE</a>
   <a href="capoHome.php?sez=attrazioni">ATTRAZIONI</a>
   <a href="capoHome.php?sez=biglietti">BIGLIETTI</a>
