bottoni oggi, domani, ... centrati

--- a/HTML/citta.html
+++ b/HTML/citta.html
@@ -13,12 +13,12 @@
 <img src="$IMGCITTA$" alt="$ALT$" width="100%" height="auto">
 
 
- <ul class="prova">
+ <div class="prova">
         <a href=""><button type="button">OGGI >></button></a>
         <a href=""><button type="button">DOMANI >></button></a>
         <a href=""><button type="button">QUESTA SETTIMANA >></button></a>
         <a href=""><button type="button">QUESTO MESE >></button></a>
- </ul>
+ </div>
 
 
 </body>
