l'admin può inserire gli articoli

--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -16,7 +16,7 @@
   <button type="submit"></button>
   <input type="text" placeholder=" Cerca...">
 
-         $ACCEDI$    <a href="../PHP/datiUtente.php">$UTENTE$</a>
+         $ACCEDI$   <a href="../PHP/datiUtente.php">$UTENTE$</a>  <a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
 
   </form>
   </div>
