sistemate alcune cose

--- a/HTML/nuoviArticoli.html
+++ b/HTML/nuoviArticoli.html
@@ -25,8 +25,10 @@
         <br>
 
         <br>
-       <div>Data inzio</div>
+       <div>Data inzio evento</div>
         <input type="dateI" name="dataI">
+        <br><br>
+        <div>Data fine evento</div>
         <input type="dateF" name="dataF">
         <br>
 
@@ -46,8 +48,6 @@
         <br>
         <input type="submit" name="pubblica" value="PUBBLICA">
      </form>
-
-     <div class='box_errore'>$MESSAGGIO$</div>
 
     </body>
 </html>
