--- a/HTML/citta.html
+++ b/HTML/citta.html
@@ -25,15 +25,31 @@
     <div class="articoloHome">
         <div class="boxArticoloHome">
             <div class="immagineArticoloHome">
-                <a href=""><img src="../IMG/vicenza/eventi/disco.jpg"></a>
+                <a href="$LINK$"><img src="$IMG$" alt="$ALT$"></a>
             </div>
 
             <div class="titoloArticoloHome">
-                <h2>Titolo</h2>
+                <h2>$TITOLOART$</h2>
             </div>
 
             <div class="testoArticoloHome">
-                Testo di prova. Qui si mette una breve descrizione del contenuto che però si puo anche omettere. se scrivo altre cose cosa succede? Inserire il <a href="">CONTINUA A LEGGERE</a>
+                $TESTO$
+            </div>
+        </div>
+    </div>
+
+     <div class="articoloHome">
+        <div class="boxArticoloHome">
+            <div class="immagineArticoloHome">
+                <a href="$LINK2$"><img src="$IMG2$" alt="$ALT$2"></a>
+            </div>
+
+            <div class="titoloArticoloHome">
+                <h2>$TITOLOART2$</h2>
+            </div>
+
+            <div class="testoArticoloHome">
+                $TESTO2$
             </div>
         </div>
     </div>
