--- a/HTML/nuoviArticoli.html
+++ b/HTML/nuoviArticoli.html
@@ -6,18 +6,18 @@
 
      <form method="post" action="../PHP/nuoviArticoli.php">
         <div>Citta di pubblicazione</div>
-          <input type="checkbox" name="citta" value="padova"> Padova<br>
-          <input type="checkbox" name="citta" value="vicenza"> Vicenza<br>
-          <input type="checkbox" name="citta" value="venezia"> Venezia<br>
-          <input type="checkbox" name="citta" value="verona"> Verona<br>
+          <input type="radio" name="citta" value="padova"> Padova<br>
+          <input type="radio" name="citta" value="vicenza"> Vicenza<br>
+          <input type="radio" name="citta" value="venezia"> Venezia<br>
+          <input type="radio" name="citta" value="verona"> Verona<br>
         <br>
          <div>Tipologia articolo</div>
-          <input type="checkbox" name="tipologia" value="eventi"> Eventi<br>
-          <input type="checkbox" name="tipologia" value="teatro"> Teatro<br>
-          <input type="checkbox" name="tipologia" value="cucina"> Cucina<br>
-          <input type="checkbox" name="tipologia" value="novit&agrave"> Novit&agrave<br>
-          <input type="checkbox" name="tipologia" value="arte"> Arte<br>
-          <input type="checkbox" name="tipologia" value="attrazioni"> Attrazioni<br>
+          <input type="radio" name="tipologia" value="eventi"> Eventi<br>
+          <input type="radio" name="tipologia" value="teatro"> Teatro<br>
+          <input type="radio" name="tipologia" value="cucina"> Cucina<br>
+          <input type="radio" name="tipologia" value="Novit&agrave"> Novit&agrave<br>
+          <input type="radio" name="tipologia" value="arte"> Arte<br>
+          <input type="radio" name="tipologia" value="attrazionia"> Attrazioni<br>
 
         <br>
        <div>Titolo</div>
