--- a/HTML/nuoviArticoli.html
+++ b/HTML/nuoviArticoli.html
@@ -2,55 +2,56 @@
 
 <head>
     <title>Nuovi articoli</title>
-    <link rel="stylesheet" type="tetx/css" href="nuoviArticoli.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/nuoviArticoli.css">
 </head>
 
 <body>
+    <div class="aggiungiArticolo">
+        <form method="post" action="../PHP/nuoviArticoli.php">
+            <div class="sceltaCittaTipologia">
+                <h4>Citta di pubblicazione</h4>
+                <input type="radio" name="citta" value="padova"> Padova <br>
+                <input type="radio" name="citta" value="vicenza"> Vicenza <br>
+                <input type="radio" name="citta" value="venezia"> Venezia <br>
+                <input type="radio" name="citta" value="verona"> Verona
+            </div>
 
-    <form method="post" action="../PHP/nuoviArticoli.php">
-        <div>Citta di pubblicazione</div>
-        <div class="aggiungiArticolo">
-            <div class="sceltaCitta"></div>
-            <input type="radio" name="citta" value="padova"> Padova
-            <input type="radio" name="citta" value="vicenza"> Vicenza
-            <input type="radio" name="citta" value="venezia"> Venezia
-            <input type="radio" name="citta" value="verona"> Verona
-        </div>
-
-        <div>Tipologia articolo</div>
-        <input type="radio" name="tipologia" value="eventi"> Eventi
-        <input type="radio" name="tipologia" value="teatro"> Teatro
-        <input type="radio" name="tipologia" value="cucina"> Cucina
-        <input type="radio" name="tipologia" value="Novit&agrave"> Novit&agrave
-        <input type="radio" name="tipologia" value="arte"> Arte
-        <input type="radio" name="tipologia" value="attrazionia"> Attrazioni
-
-
-        <div>Titolo</div>
-        <textarea name="titoloA" rows="1" cols="100"></textarea>
+            <div class="sceltaCittaTipologia">
+                <h4>Tipologia articolo</h4>
+                <input type="radio" name="tipologia" value="eventi"> Eventi<br>
+                <input type="radio" name="tipologia" value="teatro"> Teatro<br>
+                <input type="radio" name="tipologia" value="cucina"> Cucina<br>
+                <input type="radio" name="tipologia" value="Novit&agrave"> Novit&agrave<br>
+                <input type="radio" name="tipologia" value="arte"> Arte<br>
+                <input type="radio" name="tipologia" value="attrazionia"> Attrazioni
+            </div>
 
 
-
-        <div>Data inzio evento</div>
-        <input type="dateI" name="dataI">
-        <div>Data fine evento</div>
-        <input type="dateF" name="dataF">
-
-        <div>Titolo immagine(.jpg o .png)</div>
-        <textarea name="titoloI" rows="2" cols="100"></textarea>
+            <div>Titolo</div>
+            <textarea name="titoloA" rows="1" cols="100"></textarea>
 
 
 
-        <div>Descrizione immagine</div>
-        <textarea name="alt" rows="2" cols="100"></textarea>
+            <div>Data inzio evento</div>
+            <input type="dateI" name="dataI">
+            <div>Data fine evento</div>
+            <input type="dateF" name="dataF">
+
+            <div>Titolo immagine(.jpg o .png)</div>
+            <textarea name="titoloI" rows="2" cols="100"></textarea>
 
 
 
-        <div>Testo articolo</div>
-        <textarea name="testo" rows="5" cols="200"></textarea>
+            <div>Descrizione immagine</div>
+            <textarea name="alt" rows="2" cols="100"></textarea>
 
-        <input type="submit" name="pubblica" value="PUBBLICA">
-        </div>
+
+
+            <div>Testo articolo</div>
+            <textarea name="testo" rows="5" cols="200"></textarea>
+
+            <input type="submit" name="pubblica" value="PUBBLICA">
+    </div>
     </form>
 
 </body>
