--- a/HTML/nuoviArticoli.html
+++ b/HTML/nuoviArticoli.html
@@ -26,31 +26,42 @@
                 <input type="radio" name="tipologia" value="attrazionia"> Attrazioni
             </div>
 
+            <div class="sceltaCittaTipologia">
+                <h4>Titolo</h4>
+                <textarea name="titoloA" rows="1" cols="100"></textarea>
+            </div>
 
-            <div>Titolo</div>
-            <textarea name="titoloA" rows="1" cols="100"></textarea>
+            <div class="sceltaCittaTipologiaBis">
+                <h4>Data inzio evento</h4>
+                <input type="dateI" name="dataI">
+            </div>
+
+            <div class="sceltaCittaTipologiaBis">
+                <h4>Data fine evento</h4>
+                <input type="dateF" name="dataF">
+            </div>
+
+            <div class="sceltaCittaTipologia">
+                <h4>Titolo immagine (.jpg o .png)</h4>
+                <textarea name="titoloI" rows="2" cols="100"></textarea>
+            </div>
+
+
+            <div class="sceltaCittaTipologia">
+                <h4>Descrizione immagine</h4>
+                <textarea name="alt" rows="2" cols="100"></textarea>
+            </div>
+
+            <div class="sceltaCittaTipologia">
+                <h4>Testo articolo</h4>
+                <textarea name="testo" rows="5" cols="200"></textarea>
+                <div class="bottonePubblica">
+                    <button>PUBBLICA</button>
+                </div>
+            </div>
 
 
 
-            <div>Data inzio evento</div>
-            <input type="dateI" name="dataI">
-            <div>Data fine evento</div>
-            <input type="dateF" name="dataF">
-
-            <div>Titolo immagine(.jpg o .png)</div>
-            <textarea name="titoloI" rows="2" cols="100"></textarea>
-
-
-
-            <div>Descrizione immagine</div>
-            <textarea name="alt" rows="2" cols="100"></textarea>
-
-
-
-            <div>Testo articolo</div>
-            <textarea name="testo" rows="5" cols="200"></textarea>
-
-            <input type="submit" name="pubblica" value="PUBBLICA">
     </div>
     </form>
 
