--- a/HTML/nuoviArticoli.html
+++ b/HTML/nuoviArticoli.html
@@ -56,7 +56,7 @@
                 <h4>Testo articolo</h4>
                 <textarea name="testo" rows="5" cols="200"></textarea>
                 <div class="bottonePubblica">
-                    <button>PUBBLICA</button>
+                   <input class="pubblica" type="submit" name="invia" value="PUBBLICA">
                 </div>
             </div>
 
