ora le date non vengono sempre fuori

--- a/HTML/boxArticolo.html
+++ b/HTML/boxArticolo.html
@@ -9,7 +9,7 @@
 
     <div class="boxTitolo">
         <div class="titoloArticolo">
-             $TITOLO$ // DAL $DATAI$ AL $DATAF$
+             $TITOLO$  $DATAI$ $DATAF$
         </div>
     </div>
 
