modifiche box articolo

--- a/HTML/boxArticolo.html
+++ b/HTML/boxArticolo.html
@@ -7,11 +7,26 @@
 
 <body>
 
+   <div class="boxTotaleTitolo">
     <div class="boxTitolo">
         <div class="titoloArticolo">
-             $TITOLO$  $DATAI$ $DATAF$
+            $TITOLO$ $DATAI$ $DATAF$
         </div>
     </div>
+
+    <!-- <div class="boxDataEvento">
+        <div class="dataEvento">
+            $DATAI$ $DATAF$
+        </div>
+    </div> -->
+
+    <div class="boxEliminaEvento">
+        <div class="eliminaEvento">
+            $ELIMINA$
+        </div>
+    </div>
+    </div>
+
 
     <div class="boxImmagineTesto">
         <div class="immagineTesto">
