barra di ricerca operativa per padova e vicenza

--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -11,7 +11,7 @@
         </div>
 
     <div class="parteDestra">
-         <form action="ricerca.php">
+         <form action="ricerca.php" method="post">
 
   <button type="submit"></button>
   <input type="text" placeholder=" Cerca..." name="cerca">
