barra di ricerca

--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -11,10 +11,10 @@
         </div>
 
     <div class="parteDestra">
-         <form>
+         <form action="ricerca.php">
 
   <button type="submit"></button>
-  <input type="text" placeholder=" Cerca...">
+  <input type="text" placeholder=" Cerca..." name="cerca">
 
          $ACCEDI$   <a href="../PHP/datiUtente.php">$UTENTE$</a>  <a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
 
