--- a/HTML/boxArticolo.html
+++ b/HTML/boxArticolo.html
@@ -10,15 +10,15 @@
    <div class="boxTotaleTitolo">
     <div class="boxTitolo">
         <div class="titoloArticolo">
-            $TITOLO$ $DATAI$ $DATAF$
+            $TITOLO$
         </div>
     </div>
 
-    <!-- <div class="boxDataEvento">
+    <div class="boxDataEvento">
         <div class="dataEvento">
             $DATAI$ $DATAF$
         </div>
-    </div> -->
+    </div>
 
     <div class="boxEliminaEvento">
         <div class="eliminaEvento">
