prove di modifica alla lente

--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -13,7 +13,9 @@
     <div class="parteDestra">
          <form action="ricerca.php" method="post">
 
-  <button type="submit"></button>
+  <div class="lenteSearch">
+      <a href=""><img class="lente" src="../IMG/lente.png"></a>
+  </div>
   <input type="text" placeholder=" Cerca..." name="cerca">
 
          $ACCEDI$   <a href="../PHP/datiUtente.php">$UTENTE$</a>  <a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
