--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -14,7 +14,7 @@
          <form action="ricerca.php" method="post">
 
   <div class="lenteSearch">
-      <a href=""><img class="lente" src="../IMG/lente.png"></a>
+      <button type="submit"><a><img class="lente" src="../IMG/lente.png"></a></button>
   </div>
   <input type="text" placeholder=" Cerca..." name="cerca">
 
