modifiche su navbar

--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -1,28 +1,30 @@
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="../CSS/StileNav.css">
-    </head>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="../CSS/StileNav.css">
+</head>
+
 <body>
 
 
- <div class="upnav">
-   <div class="parteSinistra">
-    <a href="capoHome.php"><img class="logo" src="../IMG/Logo.png" alt="Veneto in mostra"></a>
+    <div class="upnav">
+        <div class="logo">
+            <a href="capoHome.php"><img src="../IMG/Logo.png" alt="Veneto in mostra"></a>
         </div>
 
-    <div class="parteDestra">
-         <form action="ricerca.php" method="post">
+        <form class="ricerca" action="ricerca.php" method="post">
 
-  <div class="lenteSearch">
-      <button type="submit"><a><img class="lente" src="../IMG/lente.png"></a></button>
-  </div>
-  <input type="text" placeholder=" Cerca..." name="cerca">
+            <div class="lenteSearch">
+                <button type="submit"><img class="lente" src="../IMG/lente.png"></button>
+            </div>
 
-         $ACCEDI$   <a href="../PHP/datiUtente.php">$UTENTE$</a>  <a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+            <input class="label" type="text" placeholder=" Cerca..." name="cerca">$ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a><a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
 
-  </form>
-  </div>
-</div>
+
+
+        </form>
+    </div>
+
 
 
 </body>
