--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -12,17 +12,22 @@
             <a href="capoHome.php"><img src="../IMG/Logo.png" alt="Veneto in mostra"></a>
         </div>
 
+        <div class="accessoRegistrazione">
+            $ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a>
+            <a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+        </div>
+
         <form class="ricerca" action="ricerca.php" method="post">
 
             <div class="lenteSearch">
                 <button type="submit"><img class="lente" src="../IMG/lente.png"></button>
             </div>
 
-            <input class="label" type="text" placeholder=" Cerca..." name="cerca">$ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a><a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
-
-
+            <input type="text" placeholder=" Cerca..." name="cerca">
 
         </form>
+
+
     </div>
 
 
