--- a/HTML/accesso.html
+++ b/HTML/accesso.html
@@ -9,8 +9,8 @@
 	</div>
     <form class="insertdata" method="post" action="../PHP/login.php">
         <div class="input-group">
-        <label>E-mail:</label>
-	    <input type="email" name="Email">
+        <label>Username:</label>
+	    <input type="text" name="Username">
         </div>
         <div class="input-group">
         <label>Password:</label>
