--- a/HTML/registrazione.html
+++ b/HTML/registrazione.html
@@ -15,6 +15,10 @@
 	    <input type="email" name="Email">
         </div>
         <div class="input-group">
+        <label>Username:</label>
+	    <input type="text" name="Username">
+        </div>
+        <div class="input-group">
         <label>Nome:</label>
         <input type="text" name="Nome">
         </div>
