--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -24,10 +24,14 @@
 
         </form>
 
-        <div class="accessoRegistrazione">
+        <div class="parolaUno">
             $ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a>
+        </div>
+
+        <div class="parolaDue">
             <a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
         </div>
+
 
 
     </div>
