--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -24,12 +24,8 @@
 
         </form>
 
-        <div class="parolaUno">
-            $ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a>
-        </div>
-
-        <div class="parolaDue">
-            <a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+        <div class="parolaLogin">
+            $ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a><a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
         </div>
 
 
