--- a/HTML/biglietti.html
+++ b/HTML/biglietti.html
@@ -6,7 +6,7 @@
         <meta name="description" content="descrizione pagina">
         <meta name="keywords" content="HTML,CSS,JavaScript">
         <meta name="author" content="Antonio Belculfinè,Alberto Cherobin">
-        <link rel="stylesheet" type="img/css" href="home.css">
+        <link rel="stylesheet" type="img/css" href="">
 	</head>
 	<body>
 
