--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -25,7 +25,7 @@
         </form>
 
         <div class="parolaLogin">
-            $ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a><a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+            $ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
         </div>
 
 
