--- a/HTML/boxArticolo.html
+++ b/HTML/boxArticolo.html
@@ -30,7 +30,7 @@
 
     <div class="boxImmagineTesto">
         <div class="immagineTesto">
-            <a href=""><img src="$URL$" alt="$ALT$"></a>
+            <img src="$URL$" alt="$ALT$">
             <p>$TESTO$</p>
         </div>
 
