bottoni funzionanti e  home + nome

--- a/HTML/NavigationBarDown.html
+++ b/HTML/NavigationBarDown.html
@@ -9,7 +9,7 @@
     <script src="../JS/underline.js"></script>
 
     <div class="topnav">
-        <a href="capoHome.php?pagina=$CITTA$">HOME CITTA</a>
+        <a href="capoHome.php?pagina=$CITTA$">HOME $LUOGO$</a>
         <a href="capoHome.php?sez=eventi">EVENTI</a>
         <a href="capoHome.php?sez=teatro">TEATRO</a>
         <a href="capoHome.php?sez=cucina">CUCINA</a>
