--- a/HTML/citta.html
+++ b/HTML/citta.html
@@ -16,10 +16,10 @@
 
 
     <div class="prova">
-        <a href="date.php?citta=$CITTA$&data=oggi"><button type="button">OGGI >></button></a>
-        <a href="date.php?citta=$CITTA$&data=domani"><button type="button">DOMANI >></button></a>
-        <a href="date.php?citta=$CITTA$&data=settimana"><button type="button">QUESTA SETTIMANA >></button></a>
-        <a href="date.php?citta=$CITTA$&data=mese"><button type="button">QUESTO MESE >></button></a>
+        <a href="date.php?citta=$CITTA$&data=oggi"><button type="button"> OGGI >></button></a>
+        <a href="date.php?citta=$CITTA$&data=domani"><button type="button"> DOMANI >></button></a>
+        <a href="date.php?citta=$CITTA$&data=settimana"><button type="button">PROSSIMI 7 GIORNI >></button></a>
+        <a href="date.php?citta=$CITTA$&data=mese"><button type="button"> PROSSIMI 30 GIORNI >></button></a>
     </div>
 
 
