--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -17,7 +17,7 @@
         <form class="ricerca" action="ricerca.php" method="post">
 
             <div class="lenteSearch">
-                <button type="submit"><img class="lente" src="../IMG/lente.png"></button>
+                <button type="submit"><img class="lente" src="../IMG/lente.png" alt="Cerca"></button>
             </div>
 
             <input type="text" placeholder=" Cerca..." name="cerca">
