--- a/HTML/NavigationBarDown.html
+++ b/HTML/NavigationBarDown.html
@@ -9,7 +9,7 @@
 
 
     <div class="topnav">
-        <a href="../PHP/capoHome.php?pagina=$CITTA$">HOME CITTA</a>
+        <a href="../PHP/capoHome.php?pagina=$CITTA$">HOME $LUOGO$</a>
         <a href="../PHP/capoHome.php?sez=eventi">EVENTI</a>
         <a href="../PHP/capoHome.php?sez=teatro">TEATRO</a>
         <a href="../PHP/capoHome.php?sez=cucina">CUCINA</a>
