--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,15 +1,12 @@
 <html>
 	<head>
 		<title>VENETO</title>
-        <meta charset="UFT-8">
-        <meta name="description" content="descrizione pagina">
-        <meta name="keywords" content="HTML,CSS,JavaScript">
-        <meta name="author" content="Marco Seganfreddo,Antonio Belculfinè,Alberto Cherobin">
-
+        <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
 	</head>
 	<body>
 
 	$HEADER$
+
     $DOWN$
 
     $PAGINA$
