biglietti disponibili su nuovi biglietti

--- a/HTML/nuoviArticoli.html
+++ b/HTML/nuoviArticoli.html
@@ -18,6 +18,12 @@
             <input type="radio" name="tipologia" value="attrazionia"> Attrazioni
         </div>
 
+         <div class="sceltaCittaTipologia">
+            <h4>Biglietti disponibili</h4>
+            <input type="radio" name="biglietti" value="si"> Si<br>
+            <input type="radio" name="biglietti" value="no"> No<br>
+        </div>
+
         <div class="sceltaCittaTipologia">
             <h4>Titolo</h4>
             <textarea name="titoloA" rows="1" cols="100"></textarea>
