sezione biglietto fatta

--- a/HTML/descrizioneArticolo.html
+++ b/HTML/descrizioneArticolo.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="immagineDescrizioneArticolo">
-            <img src="$IMAGE$" alt="$ALT$">
+            <img src="$IMG$" alt="$ALT$">
         </div>
 
         <div class="testoDescrizioneArticolo">
