--- a/HTML/descrizioneArticolo.html
+++ b/HTML/descrizioneArticolo.html
@@ -1,19 +1,25 @@
 <body>
     <div class="boxDescrizioneArticolo">
         <div class="titoloDescrizioneArticolo">
-            $TITOLO$
+            <h1>$TITOLO$</h1>
         </div>
 
         <div class="immagineDescrizioneArticolo">
             <img src="$IMG$" alt="$ALT$">
+
+            <div class="infoDescrizioneArticolo">
+            Un po di testo random
+            per provare se funzia
+            Ciao bella ciao bella ciao ciao ciao ciao
+            csdsd sddd alechero
+        </div>
+
         </div>
 
         <div class="testoDescrizioneArticolo">
              $TESTO$
         </div>
 
-        <div class="infoDescrizioneArticolo">
 
-        </div>
     </div>
 
