titoli sistemati e funzionanti su tutto il sito

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>VENETO</title>
+		<title>$TITOLO$</title>
         <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
 	</head>
 	<body>
