parte sotto (acquisto)

--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -1,3 +1,26 @@
+<link rel="stylesheet" type="text/css" href="../CSS/stile.css">
+
+
 <div class="boxAcquistoBiglietto">
-    <div class=""
+    <div class="scrittaAcquistoBiglietto">
+        Acquista i biglietti
+    </div>
+
+    <div class="numeroBigliettiAcquistoBiglietti">
+        Quantit&agrave;: &nbsp; <input type="number" name="quantità" min="1" max="9" step="1" value="1">
+    </div>
+
+    <div class="inserisciAcquistaBiglietto">
+        Nome: <br> <input type="text" name="nome">
+    </div>
+
+    <div class="inserisciAcquistaBiglietto">
+        Cognome: <br> <input type="text" name="cognome">
+    </div>
+
+    <div class="inserisciAcquistaBiglietto">
+        E-mail: <br>
+        <input type="email" name="email">
+    </div>
+
 </div>
