--- a/HTML/bottoneElimina.html
+++ b/HTML/bottoneElimina.html
@@ -1,3 +1,3 @@
-<form method="post" action="">
+<form method="post" action="../PHP/cancellaArticoli.php?citta=$CITTA$&id=$ID$">
     <input type="submit" value="ELIMINA">
 </form>
