--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -7,7 +7,19 @@
     </div>
 
     <div class="numeroBigliettiAcquistoBiglietti">
-        Quantit&agrave;: &nbsp; <input type="number" name="quantità" min="1" max="9" step="1" value="1">
+        Numero biglietti:
+           <select>
+            <option value="Seleziona">Seleziona</option>
+            <option value="Uno">1</option>
+            <option value="Due">2</option>
+            <option value="Tre">3</option>
+            <option value="Quattro">4</option>
+            <option value="Cinque">5</option>
+            <option value="Sei">6</option>
+            <option value="Sette">7</option>
+            <option value="Otto">8</option>
+            <option value="Nove">9</option>
+        </select>
     </div>
 
     <div class="inserisciAcquistaBiglietto">
@@ -24,5 +36,3 @@
     </div>
 
 </div>
-
-
