--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -20,7 +20,7 @@
             <option value="8">8</option>
             <option value="9">9</option>
         </select>
-        <div id="result"></div>
+        x $PREZZO$ &euro;
     </div>
 
 
@@ -39,16 +39,3 @@
     </div>
 
 </div>
-
-
-
-<script>
-    function calcola() {
-        costo = Number(document.getElementById("calcolatrice").value);
-        biglietto = $PREZZO$;
-        totale = costo*biglietto;
-        document.getElementById("result").innerHTML = totale;
-
-    }
-
-</script>
