--- a/HTML/home.html
+++ b/HTML/home.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>$TITOLO$</title>
+        <link rel="icon" href="../IMG/logoPiccolo.ico" />
         <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
 	</head>
 	<body>
