contenitore pagine sotto header

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,19 +1,26 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>$TITOLO$</title>
-        <link rel="icon" href="../IMG/logoPiccolo.ico" />
-        <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
-	</head>
-	<body>
 
-	$HEADER$
+<head>
+    <title>$TITOLO$</title>
+    <link rel="icon" href="../IMG/logoPiccolo.ico" />
+    <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
+</head>
+
+<body>
+
+
+    $HEADER$
 
     $DOWN$
 
-    $PAGINA$
+    <div class="contenitore">
 
-    $FOOTER$
+        $PAGINA$
 
-    </body>
+        $FOOTER$
+
+    </div>
+</body>
+
 </html>
