logo nel footer

--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -19,6 +19,6 @@
     </div>
 
     <div class="centro">
-        <p>IO QUA CI PIAZZEREI IL LOGO</p>
+        <img src="../IMG/Logo.png" alt"Veneto in Mostra";
     </div>
 </div>
