--- a/HTML/paginaHomeSito.html
+++ b/HTML/paginaHomeSito.html
@@ -1,6 +1,7 @@
 <div class="contenutoHomePage">
     <p>
-        <img src="https://resources.homeaway.it/info/files/live/sites/it/files/shared/HIPS/vacanze-a-tema/bassa-%20stagione/bassa%20stagione-venezia--ts-2010-09-23T15%3A33%3A38_000-04%3A00.jpg" alt="Venetoimg" height="auto" width="100%">
+
+        <img class="fotoHome" src="https://resources.homeaway.it/info/files/live/sites/it/files/shared/HIPS/vacanze-a-tema/bassa-%20stagione/bassa%20stagione-venezia--ts-2010-09-23T15%3A33%3A38_000-04%3A00.jpg" alt="Venetoimg">
     </p>
 
     <div class="foto">
