sistemato gestore e tutte le ricerche, sia in home che in tutte le città con il gestore delle date

--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -19,6 +19,6 @@
     </div>
 
     <div class="centro">
-        <img src="../IMG/Logo.png" alt"Veneto in Mostra";
+        <img src="../IMG/Logo.png" alt="Veneto in Mostra">
     </div>
 </div>
