--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -1,5 +1,30 @@
-<link rel="stylesheet" type="text/css" href="../CSS/stile.css">
+<html>
+   <head>
+       <title>Acquisto Biglietto</title>
+        <link rel="icon" href="../IMG/logoPiccolo.ico" />
+        <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
+   </head>
 
+<body>
+
+   <div class="boxDescrizioneArticolo">
+    <div class="titoloDescrizioneArticolo">
+        <h1>$TITOLO$</h1>
+    </div>
+
+    <div class="immagineDescrizioneArticolo">
+        <img src="$IMG$" alt="$ALT$">
+
+        <div class="infoDescrizioneArticolo">
+            Un po di testo random per provare se funzia Ciao bella ciao bella ciao ciao ciao ciao csdsd sddd alechero
+        </div>
+
+    </div>
+
+    <div class="testoDescrizioneArticolo">
+        $TESTO$
+    </div>
+</div>
 
 <div class="boxAcquistoBiglietto">
     <div class="scrittaAcquistoBiglietto">
@@ -39,3 +64,8 @@
     </div>
 
 </div>
+
+
+</body>
+
+</html>
