--- a/HTML/accesso.html
+++ b/HTML/accesso.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Accedi</title>
-        <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
     </head>
     <body>
         <div class="header">
