--- a/HTML/registrazione.html
+++ b/HTML/registrazione.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Pagina di registrazione nuovo utente</title>
-	<link rel="stylesheet" type="text/css" href="../CSS/style.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/stile.css">
 </head>
 <body>
 
