--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -1,70 +1,72 @@
 <html>
-   <head>
-       <title>Acquisto Biglietto</title>
-        <link rel="icon" href="../IMG/logoPiccolo.ico" />
-        <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
-   </head>
+
+<head>
+    <title>Acquisto Biglietto</title>
+    <link rel="icon" href="../IMG/logoPiccolo.ico" />
+    <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
+</head>
 
 <body>
+    <div class="footerGiu">
 
-   <div class="boxDescrizioneArticolo">
-    <div class="titoloDescrizioneArticolo">
-        <h1>$TITOLO$</h1>
-    </div>
+        <div class="boxDescrizioneArticolo">
+            <div class="titoloDescrizioneArticolo">
+                <h1>$TITOLO$</h1>
+            </div>
 
-    <div class="immagineDescrizioneArticolo">
-        <img src="$IMG$" alt="$ALT$">
+            <div class="immagineDescrizioneArticolo">
+                <img src="$IMG$" alt="$ALT$">
 
-        <div class="infoDescrizioneArticolo">
-            Un po di testo random per provare se funzia Ciao bella ciao bella ciao ciao ciao ciao csdsd sddd alechero
+                <div class="infoDescrizioneArticolo">
+                    Un po di testo random per provare se funzia Ciao bella ciao bella ciao ciao ciao ciao csdsd sddd alechero
+                </div>
+
+            </div>
+
+            <div class="testoDescrizioneArticolo">
+                $TESTO$
+            </div>
         </div>
 
+        <div class="boxAcquistoBiglietto">
+            <div class="scrittaAcquistoBiglietto">
+                Acquista i biglietti
+            </div>
+
+            <div class="numeroBigliettiAcquistoBiglietti">
+                Numero biglietti:
+                <select id="calcolatrice" onchange="calcola()">
+                    <option value="0">Seleziona</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                </select>
+                x $PREZZO$ &euro;
+            </div>
+
+
+
+            <div class="inserisciAcquistaBiglietto">
+                Nome: <br> <input type="text" name="nome">
+            </div>
+
+            <div class="inserisciAcquistaBiglietto">
+                Cognome: <br> <input type="text" name="cognome">
+            </div>
+
+            <div class="inserisciAcquistaBiglietto">
+                E-mail: <br>
+                <input type="email" name="email">
+            </div>
+
+        </div>
     </div>
-
-    <div class="testoDescrizioneArticolo">
-        $TESTO$
-    </div>
-</div>
-
-<div class="boxAcquistoBiglietto">
-    <div class="scrittaAcquistoBiglietto">
-        Acquista i biglietti
-    </div>
-
-    <div class="numeroBigliettiAcquistoBiglietti">
-        Numero biglietti:
-        <select id="calcolatrice" onchange="calcola()">
-            <option value="0">Seleziona</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-        </select>
-        x $PREZZO$ &euro;
-    </div>
-
-
-
-    <div class="inserisciAcquistaBiglietto">
-        Nome: <br> <input type="text" name="nome">
-    </div>
-
-    <div class="inserisciAcquistaBiglietto">
-        Cognome: <br> <input type="text" name="cognome">
-    </div>
-
-    <div class="inserisciAcquistaBiglietto">
-        E-mail: <br>
-        <input type="email" name="email">
-    </div>
-
-</div>
-
 
 </body>
 
