CAMPIONI DEL MONDO BEPPE

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -9,15 +9,19 @@
 
 <body>
 
-    $HEADER$
+    <div class="contenitore">
+        $HEADER$
 
-    $DOWN$
-
-
-
-    $PAGINA$
+        $DOWN$
 
 
+
+        $PAGINA$
+
+        <div class="spingiGiu">
+
+        </div>
+    </div>
 
     $FOOTER$
 
