--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -37,6 +37,8 @@
                 Acquista i biglietti
             </div>
 
+
+           <form method="post" action="">
             <div class="numeroBigliettiAcquistoBiglietti">
                 Numero biglietti:
                 <select id="calcolatrice" onchange="calcola()">
@@ -70,6 +72,8 @@
             </div>
 
         </div>
+
+        </form>
 
     <div class="inserisciAcquistaBiglietto"><br>
         <input type="submit" name="PRENOTAZIONE" value="PRENOTA">
