--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -76,8 +76,10 @@
         </form>
 
     <div class="inserisciAcquistaBiglietto"><br>
-        <input type="submit" name="PRENOTAZIONE" value="PRENOTA">
+        <input onclick="attenzione()" type="submit" name="PRENOTAZIONE" value="PRENOTA">
     </div>
+
+    <script type="text/javascript" src="../JS/attenzione.js"></script>
 
 </body>
 
