ACQUISTA BIGLIETTI FUZIONAAAAAA

--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -7,6 +7,8 @@
 
 <body>
 
+    $HEADER$
+
    <div class="boxDescrizioneArticolo">
     <div class="titoloDescrizioneArticolo">
         <h1>$TITOLO$</h1>
@@ -65,6 +67,7 @@
 
 </div>
 
+        $FOOTER$
 
 </body>
 
