--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="it">
    <head>
-       <title>Acquisto Biglietto</title>
+       <title>Prenotazione Biglietto</title>
         <link rel="icon" href="../IMG/logoPiccolo.ico" />
         <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
    </head>
@@ -8,6 +9,8 @@
 <body>
 
     $HEADER$
+
+   <a href="../PHP/capoHome.php?pagina=$INDIETRO$">TORNA INDIETRO</a>
 
    <div class="boxDescrizioneArticolo">
     <div class="titoloDescrizioneArticolo">
@@ -63,6 +66,9 @@
     <div class="inserisciAcquistaBiglietto">
         E-mail: <br>
         <input type="email" name="email">
+    </div>
+    <div class="inserisciAcquistaBiglietto"><br>
+        <input type="submit" name="PRENOTAZIONE" value="PRENOTA">
     </div>
 
 </div>
