--- a/HTML/profiloUtente.html
+++ b/HTML/profiloUtente.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Pagina profilo utente</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
 </head>
 
 <body>
