--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -38,7 +38,7 @@
             </div>
 
 
-           <form method="post" action="">
+           <form method="post" action="../PHP/controlloPrenotazioni.php">
             <div class="numeroBigliettiAcquistoBiglietti">
                 Numero biglietti:
                 <select id="calcolatrice" onchange="calcola()">
@@ -76,10 +76,9 @@
 
 
     <div class="inserisciAcquistaBiglietto"><br>
-        <input onclick="attenzione()" type="submit" name="PRENOTAZIONE" value="PRENOTA">
+        <input type="submit" name="PRENOTAZIONE" value="PRENOTA">
     </div>
 
-    <script type="text/javascript" src="../JS/attenzione.js"></script>
 
 </body>
 
