messo in ordine

--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -1,14 +1,14 @@
 <div class="upnav">
     <div class="logo">
-        <a href="capoHome.php"><img src="../IMG/Logo.png" alt="Veneto in mostra"></a>
+        <a href="index.php"><img src="images/Logo.png" alt="Veneto in mostra"></a>
     </div>
 
 
 
-    <form class="ricerca" action="../PHP/gestoreRicerche.php" method="post">
+    <form class="ricerca" action="gestoreRicerche.php" method="post">
 
         <div class="lenteSearch">
-            <button type="submit"><img class="lente" src="../IMG/lente.png" alt="Cerca"></button>
+            <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca"></button>
         </div>
 
 
@@ -16,6 +16,6 @@
     </form>
 
     <div class="parolaLogin">
-        $ACCEDI$<a href="../PHP/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="../HTML/nuoviArticoli.html">$NUOVIARTICOLI$</a>
+        $ACCEDI$<a href="php/datiUtente.php">$UTENTE$</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/nuoviArticoli.html">$NUOVIARTICOLI$</a>
     </div>
 </div>
