--- a/HTML/NavigationBarDown.html
+++ b/HTML/NavigationBarDown.html
@@ -1,13 +1,13 @@
 <div class="topnav">
-    <a href="../PHP/capoHome.php?pagina=$CITTA$">HOME $LUOGO$</a>
-    <a href="../PHP/capoHome.php?sez=eventi">EVENTI</a>
-    <a href="../PHP/capoHome.php?sez=teatro">TEATRO</a>
-    <a href="../PHP/capoHome.php?sez=cucina">CUCINA</a>
-    <a href="../PHP/capoHome.php?sez=arte">ARTE</a>
-    <a href="../PHP/capoHome.php?sez=attrazioni">ATTRAZIONI</a>
-    <a href="../PHP/capoHome.php?sez=biglietti">BIGLIETTI</a>
-    <a href="../PHP/capoHome.php?sez=contatti">CONTATTI</a>
+    <a href="index.php?pagina=$CITTA$">HOME $LUOGO$</a>
+    <a href="index.php?sez=eventi">EVENTI</a>
+    <a href="index.php?sez=teatro">TEATRO</a>
+    <a href="index.php?sez=cucina">CUCINA</a>
+    <a href="index.php?sez=arte">ARTE</a>
+    <a href="index.php?sez=attrazioni">ATTRAZIONI</a>
+    <a href="index.php?sez=biglietti">BIGLIETTI</a>
+    <a href="index.php?sez=contatti">CONTATTI</a>
 </div>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="../JS/underline.js"></script>
+<script type="text/javascript" src="JS/underline.js"></script>
