--- a/HTML/acquistoBiglietto.html
+++ b/HTML/acquistoBiglietto.html
@@ -3,7 +3,7 @@
    <head>
        <title>Prenotazione Biglietto</title>
         <link rel="icon" href="../IMG/logoPiccolo.ico" />
-        <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
+        <link rel="stylesheet" type="text/css" href="../css/stile.css">
    </head>
 
 <body>
