--- a/HTML/bottonea.html
+++ b/HTML/bottonea.html
@@ -1,3 +1,3 @@
-<a href="../HTML/registrazione.html">REGISTRATI</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="../HTML/accesso.html">ACCEDI</a>
+<a href="html/registrazione.html">REGISTRATI</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="html/accesso.html">ACCEDI</a>
 
