--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -11,24 +11,24 @@
     <hr>
 
     <div class="fisso">
-        <img class="logoNumeroFisso" src="../IMG/contatti/logoFisso.png" alt="fisso">
+        <img class="logoNumeroFisso" src="images/contatti/logoFisso.png" alt="fisso">
         <div class="numeroFisso">+39 049 2328519</div>
     </div>
 
     <div class="mobile">
-        <img class="logoNumeroMobile" src="../IMG/contatti/logoMobile.png" alt="mobile">
+        <img class="logoNumeroMobile" src="images/contatti/logoMobile.png" alt="mobile">
         <div class="numeroMobile">+39 347 2231293</div>
     </div>
 
     <div class="eMail">
-        <img class="immagineMail" src="../IMG/contatti/logoEmail.png" alt="mail">
+        <img class="immagineMail" src="images/contatti/logoEmail.png" alt="mail">
         <div class="indirizzoEmail">
             info@venetoinmostra.com
         </div>
     </div>
 
     <div class="telegramContatti">
-        <img class="immagineTelegram" src="../IMG/contatti/logoTelegram.png" alt="telegram">
+        <img class="immagineTelegram" src="images/contatti/logoTelegram.png" alt="telegram">
         <div class="contattoTelegram">
             @Veneto_in_mostra
         </div>
@@ -44,7 +44,7 @@
 
     <div class="indirizzo">
 
-        <a href="https://goo.gl/maps/JXrrvmpKNYL2"><img src="../IMG/contatti/logoSede.png" alt="logoSede"></a>
+        <a href="https://goo.gl/maps/JXrrvmpKNYL2"><img src="images/contatti/logoSede.png" alt="logoSede"></a>
         <div class="indirizzoCompleto">
             Padova, Via Trieste 63, 35121 <br><br> Presso Torre Archimede, 7&deg; Piano
         </div>
