--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -4,11 +4,11 @@
             <h2>Social</h2>
             <hr>
             <p> Seguici su: </p>
-            <a href="http://www.facebook.com"><img src="../IMG/footer/facebook.jpg" alt="facebook"></a>
-            <a href="http://www.twitter.com"><img src="../IMG/footer/twitter.jpg" alt="twitter"></a>
-            <a href="http://www.pinterest.com"><img src="../IMG/footer/pinterest.jpg" alt="pinterest"></a>
-            <a href="http://www.instagram.com"><img src="../IMG/footer/instagram.jpg" alt="instagram"></a>
-            <a href="http://www.youtube.com"><img src="../IMG/footer/youtube.jpg" alt="youtube"></a>
+            <a href="http://www.facebook.com"><img src="images/footer/facebook.jpg" alt="facebook"></a>
+            <a href="http://www.twitter.com"><img src="images/footer/twitter.jpg" alt="twitter"></a>
+            <a href="http://www.pinterest.com"><img src="images/footer/pinterest.jpg" alt="pinterest"></a>
+            <a href="http://www.instagram.com"><img src="images/footer/instagram.jpg" alt="instagram"></a>
+            <a href="http://www.youtube.com"><img src="images/footer/youtube.jpg" alt="youtube"></a>
 
         </div>
 
@@ -20,7 +20,7 @@
         </div>
 
         <div class="centro">
-            <img src="../IMG/Logo.png" alt="Veneto in Mostra">
+            <img src="images/Logo.png" alt="Veneto in Mostra">
         </div>
     </div>
 
