--- a/HTML/paginaHomeSito.html
+++ b/HTML/paginaHomeSito.html
@@ -5,10 +5,10 @@
     </p>
 
     <div class="foto">
-        <a href="capoHome.php?pagina=padova"><img src="../IMG/bottoniHome/padova.jpg" alt="padova"></a>
-        <a href="capoHome.php?pagina=vicenza"><img src="../IMG/bottoniHome/vicenza.jpg" alt="vicenza"/></a>
-        <a href="capoHome.php?pagina=venezia"><img src="../IMG/bottoniHome/venezia.jpg" alt="venezia"/></a>
-        <a href="capoHome.php?pagina=verona"><img src="../IMG/bottoniHome/verona.jpg" alt="verona"/></a>
+        <a href="index.php?pagina=padova"><img src="images/bottoniHome/padova.jpg" alt="padova"></a>
+        <a href="index.php?pagina=vicenza"><img src="images/bottoniHome/vicenza.jpg" alt="vicenza"/></a>
+        <a href="index.php?pagina=venezia"><img src="images/bottoniHome/venezia.jpg" alt="venezia"/></a>
+        <a href="index.php?pagina=verona"><img src="images/bottoniHome/verona.jpg" alt="verona"/></a>
     </div>
 
 </div>
