--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>$TITOLO$</title>
-    <link rel="icon" href="../IMG/logoPiccolo.ico" />
-    <link rel="stylesheet" type="text/css" href="../CSS/stile.css">
+    <link rel="icon" href="images/logoPiccolo.ico" />
+    <link rel="stylesheet" type="text/css" href="css/stile.css">
 </head>
 
 <body>
