commit personali intimi(ssimi)

--- a/html/footer.html
+++ b/html/footer.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="centro">
-            <img src="images/Logo.png" alt="Veneto in Mostra">
+            <a href="index.php"><img src="images/Logo.png" alt="Veneto in Mostra"></a>
         </div>
     </div>
 
