--- a/HTML/accesso.html
+++ b/HTML/accesso.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE HTML>
+   <html>
     <head>
         <title>Accedi</title>
         <link rel="stylesheet" type="text/css" href="../css/stile.css">
