nomi citta e foto ridimensionate

--- a/html/paginaHomeSito.html
+++ b/html/paginaHomeSito.html
@@ -11,4 +11,11 @@
         <a href="index.php?pagina=verona"><img src="images/bottoniHome/verona.jpg" alt="verona"/></a>
     </div>
 
+    <div class="nomeCittaFoto">
+        <a href="index.php?pagina=padova"><p>Padova</p></a>
+        <a href="index.php?pagina=vicenza"><p>Vicenza</p></a>
+        <a href="index.php?pagina=venezia"><p>Venezia</p></a>
+        <a href="index.php?pagina=verona"><p>Verona</p></a>
+    </div>
+
 </div>
