--- a/HTML/NavigationBarUp.html
+++ b/HTML/NavigationBarUp.html
@@ -5,7 +5,7 @@
 
 
 
-    <form class="ricerca" action="gestoreRicerche.php" method="post">
+    <form class="ricerca" action="DateRicerche.php" method="post">
 
         <div class="lenteSearch">
             <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca"></button>
