--- a/HTML/citta.html
+++ b/HTML/citta.html
@@ -2,8 +2,8 @@
 
 
 <div class="prova">
-    <a href="gestoreDate.php?citta=$CITTA$&data=oggi"><button type="button"> OGGI >></button></a>
-    <a href="gestoreDate.php?citta=$CITTA$&data=domani"><button type="button"> DOMANI >></button></a>
-    <a href="gestoreDate.php?citta=$CITTA$&data=settimana"><button type="button">PROSSIMI 7 GIORNI >></button></a>
-    <a href="gestoreDate.php?citta=$CITTA$&data=mese"><button type="button"> PROSSIMI 30 GIORNI >></button></a>
+    <a href="DateRicerche.php?tipo=data&citta=$CITTA$&data=oggi"><button type="button"> OGGI >></button></a>
+    <a href="DateRicerche.php?tipo=data&citta=$CITTA$&data=domani"><button type="button"> DOMANI >></button></a>
+    <a href="DateRicerche.php?tipo=data&citta=$CITTA$&data=settimana"><button type="button">PROSSIMI 7 GIORNI >></button></a>
+    <a href="DateRicerche.php?tipo=data&citta=$CITTA$&data=mese"><button type="button"> PROSSIMI 30 GIORNI >></button></a>
 </div>
