sistemato il torna indietro dall'acquista biglietti

--- a/html/acquistoBiglietto.html
+++ b/html/acquistoBiglietto.html
@@ -8,7 +8,7 @@
 
 <body>
 
-   <a href="../PHP/capoHome.php?pagina=$INDIETRO$">TORNA INDIETRO</a>
+   <a href="../index.php?pagina=$CITTA$">TORNA INDIETRO</a>
 
         <h1>$TITOLO$</h1>
 
