--- a/html/accesso.html
+++ b/html/accesso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-   <html>
+   <html lang="it">
     <head>
         <title>Accedi</title>
         <link rel="stylesheet" type="text/css" href="../css/stile.css">
