--- a/html/profiloUtente.html
+++ b/html/profiloUtente.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="it">
 <head>
     <title>Pagina profilo utente</title>
     <link rel="stylesheet" type="text/css" href="../css/stile.css">
