--- a/html/registrazione.html
+++ b/html/registrazione.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="it">
 <head>
 	<title>Pagina di registrazione nuovo utente</title>
 	<link rel="stylesheet" type="text/css" href="../css/stile.css">
