--- a/html/NavigationBarDown.html
+++ b/html/NavigationBarDown.html
@@ -9,5 +9,5 @@
     <a href="index.php?sez=contatti">CONTATTI</a>
 </div>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="JS/underline.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="JS/underline.js"></script>
