committiamo ogni tanto cosi fa numero

--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -1,7 +1,6 @@
 <div class="upnav">
-    <div class="logo">
-        <a href="index.php"><img src="images/Logo.png" alt="Veneto in mostra"></a>
-    </div>
+    <a href="index.php"><img class="logo" src="images/Logo.png" alt="Veneto in mostra"></a>
+
 
 
 
