--- a/html/bottoneElimina.html
+++ b/html/bottoneElimina.html
@@ -1,3 +1,3 @@
-<form method="post" action="../PHP/cancellaArticoli.php?citta=$CITTA$&id=$ID$">
-    <input type="submit" value="ELIMINA">
-</form>
+<a href="php/cancellaArticoli.php?citta=$CITTA$&id=$ID$">ELIMINA</a>
+
+
