sezione accedi e registrati da rifare e font sistemati topnav

--- a/html/accesso.html
+++ b/html/accesso.html
@@ -13,14 +13,16 @@
         <label>Username:</label>
 	    <input type="text" name="Username">
         </div>
+
         <div class="input-group">
         <label>Password:</label>
         <input type="Password" name="Password">
         </div>
-        <div class="input-group"><br>
-            <input type="submit" class="btn" name="REGISTRATI" value="ACCEDI">
+
+        <div class="btn">
+            <input type="submit" name="REGISTRATI" value="ACCEDI">
         </div>
-         <p><br>
+         <p>
             Non hai ancora un profilo? <a href="registrazione.html">Crealo qui</a>
         </p>
     </form>
