--- a/html/NavigationBarUp.html
+++ b/html/NavigationBarUp.html
@@ -4,7 +4,7 @@
 
 
 
-    <form class="ricerca" action="DateRicerche.php" method="post">
+    <form class="ricerca" action="index.php?tipo=ricerca" method="post">
 
         <div class="lenteSearch">
             <button type="submit"><img class="lente" src="images/lente.png" alt="Cerca"></button>
