--- a/html/citta.html
+++ b/html/citta.html
@@ -2,8 +2,8 @@
 
 
 <div class="prova">
-    <a href="index.php?tipo=date&citta=$CITTA$&data=oggi"><button type="button"> OGGI >></button></a>
-    <a href="index.php?tipo=date&citta=$CITTA$&data=domani"><button type="button"> DOMANI >></button></a>
-    <a href="index.php?tipo=date&citta=$CITTA$&data=settimana"><button type="button">PROSSIMI 7 GIORNI >></button></a>
-    <a href="index.php.php?tipo=date&citta=$CITTA$&data=mese"><button type="button"> PROSSIMI 30 GIORNI >></button></a>
+    <a href="index.php?tipo=date&data=oggi"><button type="button"> OGGI >></button></a>
+    <a href="index.php?tipo=date&data=domani"><button type="button"> DOMANI >></button></a>
+    <a href="index.php?tipo=date&&data=settimana"><button type="button">PROSSIMI 7 GIORNI >></button></a>
+    <a href="index.php.php?tipo=date$&data=mese"><button type="button"> PROSSIMI 30 GIORNI >></button></a>
 </div>
