--- a/html/contatti.html
+++ b/html/contatti.html
@@ -10,26 +10,26 @@
 
     <hr>
 
-    <div class="fisso">
-        <img class="logoNumeroFisso" src="images/contatti/logoFisso.png" alt="fisso">
-        <div class="numeroFisso">+39 049 2328519</div>
+    <div class="box">
+        <img class="boxLogo" src="images/contatti/logoFisso.png" alt="fisso">
+        <div class="numero">+39 049 2328519</div>
     </div>
 
-    <div class="mobile">
-        <img class="logoNumeroMobile" src="images/contatti/logoMobile.png" alt="mobile">
-        <div class="numeroMobile">+39 347 2231293</div>
+    <div class="box">
+        <img class="boxLogo" src="images/contatti/logoMobile.png" alt="mobile">
+        <div class="numero">+39 347 2231293</div>
     </div>
 
-    <div class="eMail">
-        <img class="immagineMail" src="images/contatti/logoEmail.png" alt="mail">
-        <div class="indirizzoEmail">
+    <div class="box">
+        <img class="boxLogo" src="images/contatti/logoEmail.png" alt="mail">
+        <div class="contatto">
             info@venetoinmostra.com
         </div>
     </div>
 
-    <div class="telegramContatti">
-        <img class="immagineTelegram" src="images/contatti/logoTelegram.png" alt="telegram">
-        <div class="contattoTelegram">
+    <div class="box">
+        <img class="boxLogo" src="images/contatti/logoTelegram.png" alt="telegram">
+        <div class="contatto">
             @Veneto_in_mostra
         </div>
     </div>
