--- a/html/acquistoBiglietto.html
+++ b/html/acquistoBiglietto.html
@@ -58,7 +58,7 @@
                 <input type="email" name="email">
             </div>
 
-            <div class="inserisciAcquistaBiglietto"><br>
+            <div class="prenota">
                 <input type="submit" name="PRENOTAZIONE" value="PRENOTA">
             </div>
 
