--- a/html/citta.html
+++ b/html/citta.html
@@ -4,6 +4,6 @@
 <div class="prova">
     <a href="index.php?tipo=date&data=oggi"><button type="button"> OGGI >></button></a>
     <a href="index.php?tipo=date&data=domani"><button type="button"> DOMANI >></button></a>
-    <a href="index.php?tipo=date&&data=settimana"><button type="button">PROSSIMI 7 GIORNI >></button></a>
-    <a href="index.php.php?tipo=date$&data=mese"><button type="button"> PROSSIMI 30 GIORNI >></button></a>
+    <a href="index.php?tipo=date&data=settimana"><button type="button">PROSSIMI 7 GIORNI >></button></a>
+    <a href="index.php?tipo=date&data=mese"><button type="button"> PROSSIMI 30 GIORNI >></button></a>
 </div>
